# Haven

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/sh/haven/app/navigation/: DesktopScreen.kt  HavenNavHost.kt  Screen.kt
build-proot/: build.sh
core/data/schemas/sh.haven.core.data.db.HavenDatabase/: 10.json  13.json  14.json  15.json
core/data/src/test/kotlin/sh/haven/core/data/: ConnectionProfileTest.kt
core/et/src/main/kotlin/sh/haven/core/et/: EtSession.kt  EtSessionManager.kt
core/local/: build.gradle.kts
core/local/src/main/kotlin/sh/haven/core/local/: LocalSessionManager.kt  ProotManager.kt
core/mosh/src/main/cpp/: CMakeLists.txt  pty_jni.c
core/mosh/src/main/kotlin/sh/haven/core/mosh/: MoshSession.kt  MoshSessionManager.kt  (+1 more)
core/rdp/: build.gradle.kts
core/ssh/: build.gradle.kts
fastlane/metadata/android/en-US/changelogs/: 840.txt
feature/sftp/: build.gradle.kts
gradle/: libs.versions.toml
integration-tests/: build.gradle.kts
integration-tests/src/test/kotlin/sh/haven/integration/: EtTransportTest.kt  MoshConnectivityTest.kt  MoshTransportTest.kt  SessionManagerTest.kt  TestServer.kt
local-repo/org/connectbot/termlib/0.0.22-patched/: termlib-0.0.22-patched.aar  termlib-0.0.22-patched.pom
rdp-kotlin/: build.gradle.kts
rdp-kotlin/kotlin/sh/haven/rdp/: rdp_transport.kt
rdp-kotlin/rust/: Cargo.toml
rdp-kotlin/rust/src/: lib.rs
rdp-kotlin/tools/: build-android.sh
tools/: build-mosh.sh
(+43 files in other folders)
